# Digital-Image-Processing-ToolBox

./: .gitignore  Project1.sln  README.md  code.txt  project_structure.txt
ImageProcessorApp/: CMakeLists.txt  CMakeLists_console.txt  CMakeLists_minimal.txt  CMakeLists_professional.txt  CMakeLists_simple.txt  CMakeLists_test.txt  FEATURE_IMPLEMENTATION_GUIDE.md  GIT_CLEANUP_COMPLETE.md  INSTALL.md  INSTALLATION_COMPLETE.md  INTEGRATION_COMPLETE.md  ImageProcessorApp.pro  ImageProcessorApp.vcxproj  ImageProcessorApp_Enhancement_Prompt.txt  LAB8_QUICK_START.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_MODERNIZATION.md  PROJECT_STRUCTURE.md  README.md  TRANSFORMATION_SUMMARY.md  UNDO_IMPLEMENTATION.md  build_all.bat  build_console.bat  build_custom.bat  build_minimal_test.bat  build_qt.bat  build_simple_test.bat  build_simplified_main.bat  codesam.txt  console_version.cpp  create_icon.py  diagnose_app.bat  final_test.bat  fix_dlls.bat  minimal_opencv_test.cpp  qt_test.cpp  remove_emojis.py  reorganize_project.py  run_app_debug.bat  (+5 more)
ImageProcessorApp/build_console/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ImageProcessorConsole.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  console_app.vcxproj  console_app.vcxproj.filters
ImageProcessorApp/build_minimal/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MinimalOpenCVTest.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  minimal_test.vcxproj  minimal_test.vcxproj.filters
ImageProcessorApp/build_minimal/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
ImageProcessorApp/build_minimal/minimal_test_autogen/include_Release/: minimal_opencv_test.moc  minimal_opencv_test.moc.d
ImageProcessorApp/build_professional/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ImageProcessorApp.sln  ImageProcessorApp.vcxproj  ImageProcessorApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ImageProcessorApp/build_professional/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
ImageProcessorApp/build_professional/ImageProcessorApp_autogen/include_Release/3YJK5W5UP7/: qrc_resources_CMAKE_.cpp
ImageProcessorApp/build_professional/ImageProcessorApp_autogen/include_Release/UVLADIE3JM/: moc_HistogramWidget.cpp.d  moc_ImageCanvas.cpp  moc_ImageCanvas.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_TransformDialog.cpp  moc_TransformDialog.cpp.d
ImageProcessorApp/build_simplified/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  SimplifiedMain.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  simplified_main.vcxproj  simplified_main.vcxproj.filters
ImageProcessorApp/build_simplified/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
ImageProcessorApp/build_simplified/simplified_main_autogen/include_Release/: simplified_main.moc  simplified_main.moc.d
ImageProcessorApp/build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  SimpleTest.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  simple_test.vcxproj  simple_test.vcxproj.filters
ImageProcessorApp/build_test/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
ImageProcessorApp/build_test/simple_test_autogen/include_Release/: simple_test.moc  simple_test.moc.d
ImageProcessorApp/docs/: DIAGNOSIS_COMPLETE.md  DLL_FIX_COMPLETE.md  EMOJI_REMOVAL_COMPLETE.md  FILTERS_COMPLETE.md  FILTERS_DOCUMENTATION.md  QUICK_START.md
ImageProcessorApp/include/filters/: ImageFilters.h
ImageProcessorApp/include/processing/: ImageProcessingLib.h
ImageProcessorApp/resources/: resources.qrc
ImageProcessorApp/src/: MainWindow.cpp  MainWindow.h  MainWindow_new.cpp  TransformDialog.cpp  TransformDialog.h  main.cpp
ImageProcessorApp/src/core/: ImageProcessor.h
ImageProcessorApp/src/dialogs/: ColorAdjustDialog.cpp  ColorAdjustDialog.h  FilterDialog.cpp  FilterDialog.h  TransformDialog.cpp
ImageProcessorApp/src/filters/: ImageFilters.cpp  ImageFilters.h
ImageProcessorApp/src/processing/: ColorProcessingLib.cpp  ColorProcessingLib.h  ImageProcessingLib.cpp  ImageProcessingLib.h  MorphologyLib.cpp  MorphologyLib.h  SegmentationLib.cpp  SegmentationLib.h  TransformationsLib.cpp  TransformationsLib.h
ImageProcessorApp/src/ui/: MainWindow.cpp  MainWindow.h
ImageProcessorApp/src/utils/: ImageUtils.cpp  ImageUtils.h
ImageProcessorApp/src/widgets/: HistogramWidget.cpp  HistogramWidget.h  ImageCanvas.cpp  ImageCanvas.h
Project1/: BW.h  DR.h  ImageProcesses.h  ImageProcessingGUI.cpp  ImageProcessingGUI.h  Lab1.cpp  Lab2.cpp  Lab3.cpp  Lab4.cpp  Project1.vcxproj  Project1.vcxproj.filters  Source.cpp  Source_Console.cpp  WinMain.cpp  counter.h
